--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ScheduleJob_Details.cs" />
     <Compile Include="ScheduleJob_Details_Triggers.cs" />
+    <Compile Include="ScheduleJob_Log.cs" />
     <Compile Include="SysConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
