--- a/Quartz.Core/packages.config
+++ b/Quartz.Core/packages.config
@@ -4,6 +4,7 @@
   <package id="CrystalQuartz.Owin" version="6.8.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Diagnostics" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.0.0" targetFramework="net461" />
