--- a/QuartzWebNancy/QuartzWebNancy.csproj
+++ b/QuartzWebNancy/QuartzWebNancy.csproj
@@ -83,10 +83,12 @@
     <Content Include="Content\QuartzManage\app\service\voteServices.js" />
     <Content Include="Content\QuartzManage\static\css\app.css" />
     <Content Include="Content\QuartzManage\static\css\pure-0.6.min.css" />
+    <Content Include="Content\Css\wui.min.css" />
     <Content Include="Content\QuartzManage\static\js\angular-1.5.8.js" />
     <Content Include="Content\QuartzManage\static\js\angular-1.5.8.min.js" />
     <Content Include="Content\QuartzManage\static\js\angular-route.js" />
     <Content Include="Content\QuartzManage\static\js\angular-route.min.js" />
+    <Content Include="Content\Scripts\wui-date.js" />
     <Content Include="Content\QuartzManage\tmpl\player\add.html" />
     <Content Include="Content\QuartzManage\tmpl\player\edit.html" />
     <Content Include="Content\QuartzManage\tmpl\player\list.html" />
@@ -96,11 +98,15 @@
     <Content Include="Content\Scripts\jquery-1.10.2.min.js" />
     <Content Include="Content\Scripts\angular-1.7.0.min.js" />
     <Content Include="Views\QuartzManage\triggerAdd.cshtml" />
+    <Content Include="Content\Css\font\iconfont.eot" />
+    <Content Include="Content\Css\font\iconfont.ttf" />
+    <Content Include="Content\Css\font\iconfont.woff" />
     <None Include="Views\QuartzManage\add.cshtml" />
     <Content Include="Views\QuartzManage\triggerEdit.cshtml" />
     <None Include="Views\QuartzManage\edit.cshtml" />
     <Content Include="Views\QuartzManage\TriggerList.cshtml" />
     <Content Include="Views\QuartzManage\welcome.cshtml" />
+    <Content Include="Views\QuartzManage\scheduleLog.cshtml" />
     <None Include="Views\QuartzManage\home.cshtml" />
     <None Include="Views\QuartzManage\view.cshtml" />
     <Content Include="Web.config" />
